# obs-sample

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
cmake/Modules/: ObsDefaults_Linux.cmake
example/: CMakeLists.txt  const_define.h  darry_example.cpp  mainwidget.cpp  mainwidget.h  obs_ctl.cpp  obs_ctl.h  obs_example.cpp  obsimp.cpp  obsimp.h  signal_example.cpp
example/cmake/: os-linux.cmake
libobs/: CMakeLists.txt  obs-audio-controls.c  obs-config.h  obs-data.h  obs-encoder.c  obs-hotkey.c  obs-internal.h  obs-nix-wayland.c  obs-nix-x11.c  obs-nix.c  obs-properties.h  obs-scene.c  obs-source.c  obs-source.h  obs-video.c  obs-win-crash-handler.c  obs-windows.c  obs.c  obs.cpp  obs.h  obsconfig.h
libobs/callback/: decl.c  signal.c  signal.h
libobs/graphics/: effect-parse.h  graphics-magick.c  graphics.cpp
libobs/media/: audio-io.h  video-io.c  video-io.h
libobs/util/: pipe-windows.c  platform-nix.c
plugins/: CMakeLists.txt
plugins/aja/: CMakeLists.txt  aja-props.hpp
plugins/image-source/: CMakeLists.txt
plugins/linux-alsa/: CMakeLists.txt
plugins/linux-capture/: CMakeLists.txt
plugins/linux-jack/: CMakeLists.txt
plugins/linux-pipewire/: CMakeLists.txt
plugins/linux-pulseaudio/: CMakeLists.txt
plugins/linux-v4l2/: CMakeLists.txt  v4l2-helpers.h  v4l2-input.c
plugins/obs-ffmpeg/: CMakeLists.txt  obs-ffmpeg-vaapi.c  obs-ffmpeg-video-encoders.h
plugins/obs-ffmpeg/ffmpeg-mux/: CMakeLists.txt
plugins/obs-filters/: CMakeLists.txt  compressor-filter.c  eq-filter.c  expander-filter.c  gain-filter.c  limiter-filter.c  noise-gate-filter.c  noise-suppress-filter.c
plugins/obs-libfdk/: CMakeLists.txt
plugins/obs-outputs/: CMakeLists.txt
plugins/obs-transitions/: CMakeLists.txt
plugins/obs-webrtc/: CMakeLists.txt
plugins/obs-webrtc/cmake/: legacy.cmake
plugins/obs-x264/: CMakeLists.txt
plugins/rtmp-services/: CMakeLists.txt
plugins/text-freetype2/: CMakeLists.txt
plugins/vlc-video/: CMakeLists.txt  vlc-video-source.c
sample_cache/: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md
